# idu_api

./: .gitignore  README.md  logrotate.conf  migrations.Dockerfile  pyproject.toml
.github/workflows/: build_and_deploy_urban_api.yaml
duty/scripts/fix_geometries/: main.py
duty/scripts/migrate_user_ids/: main.py
duty/scripts/regenerate_projects_context/: main.py
duty/scripts/regenerate_projects_previews/: main.py
duty/scripts/update_minio_projects_bucket/: main.py
idu_api/common/db/: config.py
idu_api/common/exceptions/: base.py  mapper.py
idu_api/common/utils/: secrets.py
idu_api/urban_api/: __init__.py  __main__.py  config.py  fastapi_init.py  version.py
idu_api/urban_api/dependencies/: __init__.py  auth_dep.py  kafka_producer_dep.py  logger_dep.py  metrics_dep.py  project_storage_dep.py
idu_api/urban_api/dto/: __init__.py  binds.py  buffers.py  buildings.py  cadastres.py  functional_zones.py  hexagons.py  indicators.py  normatives.py  object_geometries.py  pages.py  physical_objects.py  profiles_reclamation.py  projects.py  scenarios.py  service_types.py  services.py  soc_groups.py  territories.py  urban_objects.py
idu_api/urban_api/exceptions/: __init__.py  base.py  mapper.py
idu_api/urban_api/handlers/: broker.py  system.py
idu_api/urban_api/logic/: functional_zones.py  indicators.py  object_geometries.py  physical_objects.py  projects.py  service_types.py  services.py  system.py  territories.py
idu_api/urban_api/middlewares/: authentication.py  dependency_injection.py  exception_handler.py  logging.py  observability.py
idu_api/urban_api/minio/: client.py
idu_api/urban_api/observability/: __init__.py  config.py  logging.py  metrics.py  metrics_server.py  otel_agent.py  utils.py
idu_api/urban_api/schemas/: __init__.py  binds.py  buffers.py  buildings.py  cadastres.py  enums.py  functional_zones.py  geojson.py  geometries.py  hexagons.py  indicators.py  minio.py  normatives.py  object_geometries.py  pages.py  physical_object_types.py  physical_objects.py  profiles_reclamation.py  projects.py  scenarios.py  service_types.py  services.py  short_models.py  territories.py  urban_objects.py
idu_api/urban_api/static/: description.txt  oauth2-redirect.html
idu_api/urban_mcp/: __init__.py  __main__.py  config.py  fastmcp_init.py  groups.py  version.py
tests/urban_api/: conftest.py  test_infra.py  test_stress.py
tests/urban_api/helpers/: auth.py  (+18 more)
tests/urban_mcp/: test_simple.py  test_tools_desc.py
urban_api/: .env.example  Dockerfile  config.yaml.example  docker-compose.deploy.yaml  docker-compose.yaml  postgis.Dockerfile  supervisord.conf
urban_mcp/: .env.example  Dockerfile  config.yaml.example  docker-compose.yaml  supervisord.conf
(+230 files in other folders)
